# cargo-machete

./: .dockerignore  .pre-commit-hooks.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  RELEASE.md  action.yml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: main.yml
action/: entrypoint.sh
cli-tests/actual/autofix-with-feature/: Cargo.toml
cli-tests/expected/feature-named-like-dep/: Cargo.toml
cli-tests/expected/feature-named-like-dep-2/: Cargo.toml
integration-tests/autofix-with-feature/actual/: Cargo.toml
integration-tests/autofix-with-feature/expected/: Cargo.toml
integration-tests/build-dep-used/: Cargo.toml  build.rs
integration-tests/dev-dependencies/: Cargo.toml
integration-tests/dev-dependencies/src/: main.rs
integration-tests/dev-dependencies/tests/: lib.rs
integration-tests/false-positive-log/: Cargo.toml
integration-tests/feature-dep/: Cargo.toml
integration-tests/feature-dep/src/: main.rs
integration-tests/ignored-dep/: Cargo.toml
integration-tests/ignored-dep-workspace/: Cargo.toml
integration-tests/ignored-dep-workspace/inner/: Cargo.toml
integration-tests/ignored-dep-workspace/inner/src/: main.rs
integration-tests/ignored-dep/src/: main.rs
integration-tests/ignored-dirs/: Cargo.toml
integration-tests/ignored-dirs-cross-platform/: Cargo.toml
integration-tests/ignored-dirs-cross-platform/src/: main.rs
integration-tests/ignored-dirs-cross-platform/src/backward/: mod.rs
integration-tests/ignored-dirs-cross-platform/src/backward/path/: mod.rs
integration-tests/ignored-dirs-cross-platform/src/forward/: mod.rs
integration-tests/ignored-dirs-cross-platform/src/forward/path/: mod.rs
integration-tests/ignored-dirs-glob/: Cargo.toml
integration-tests/ignored-dirs-glob/src/: main.rs
integration-tests/ignored-dirs-glob/src/normal/: mod.rs
integration-tests/ignored-dirs-glob/src/test_helpers/: mod.rs
integration-tests/ignored-dirs-nested/: Cargo.toml
integration-tests/ignored-dirs-nested/src/: main.rs
integration-tests/ignored-dirs-nested/src/ignored/: mod.rs
integration-tests/ignored-dirs-nested/src/ignored/nested/: mod.rs
integration-tests/ignored-dirs-nested/src/ignored/nested/deep/: mod.rs
integration-tests/ignored-dirs-nested/src/normal/: mod.rs
integration-tests/ignored-dirs-nested/src/other/: mod.rs
integration-tests/ignored-dirs-nested/src/other/deep/: mod.rs
integration-tests/ignored-dirs-workspace/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested-deep/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested-deep/inner/nested/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested-deep/inner/nested/deep/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested/inner/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested/inner/nested/: Cargo.toml
integration-tests/ignored-dirs-workspace-nested/inner/nested/src/normal_dir/: mod.rs
integration-tests/ignored-dirs-workspace-nested/inner/src/: main.rs
integration-tests/ignored-dirs-workspace/inner/: Cargo.toml
integration-tests/ignored-dirs-workspace/inner/src/: main.rs
integration-tests/ignored-dirs-workspace/inner/src/normal_dir/: mod.rs
integration-tests/ignored-dirs/src/: main.rs
integration-tests/ignored-dirs/src/ignored_dir/: mod.rs
integration-tests/ignored-dirs/src/normal_dir/: mod.rs
integration-tests/ignored-workspace-member/: Cargo.toml
integration-tests/ignored-workspace-member/api/: Cargo.toml
integration-tests/ignored-workspace-member/api/src/: lib.rs
integration-tests/ignored-workspace-member/math/: Cargo.toml
integration-tests/ignored-workspace-member/math/src/: lib.rs
integration-tests/ignored-workspace-member/network/: Cargo.toml
integration-tests/ignored-workspace-member/network/src/: lib.rs
integration-tests/just-unused/: Cargo.toml
integration-tests/multi-key-dep/: Cargo.toml
integration-tests/multi-key-dep/src/: main.rs
integration-tests/renamed-dep/: Cargo.toml
integration-tests/renamed-dep-workspace/: Cargo.toml
integration-tests/renamed-dep-workspace/inner/: Cargo.toml
integration-tests/renamed-dep/src/: main.rs
integration-tests/renaming-works/: Cargo.toml
integration-tests/renaming-works/src/: lib.rs
integration-tests/unused-kebab-spec/: Cargo.toml
integration-tests/unused-renamed-in-registry/: Cargo.toml
integration-tests/unused-renamed-in-spec/: Cargo.toml
integration-tests/unused-transitive/: Cargo.toml  README.md
integration-tests/unused-transitive/lib1/: Cargo.toml
integration-tests/with-bench/: Cargo.toml
integration-tests/with-bench/bench/: Cargo.toml
integration-tests/with-bench/bench/src/: main.rs
integration-tests/with-bench/lib/: Cargo.toml
integration-tests/with-bench/lib/src/: lib.rs
integration-tests/workspace-empty/: Cargo.toml
integration-tests/workspace-ignored-deps/: Cargo.toml
integration-tests/workspace-ignored-deps/app/: Cargo.toml
integration-tests/workspace-ignored-deps/app/src/: main.rs
integration-tests/workspace-package/: Cargo.toml
integration-tests/workspace-package/program/: Cargo.toml
integration-tests/workspace-renamed-deps/: Cargo.toml
integration-tests/workspace-renamed-deps/lib/: Cargo.toml
integration-tests/workspace-renamed-deps/lib/src/: lib.rs
integration-tests/workspace-unused-deps/: Cargo.toml
integration-tests/workspace-unused-deps/member1/: Cargo.toml
integration-tests/workspace-unused-deps/member1/src/: lib.rs
integration-tests/workspace-unused-deps/member2/: Cargo.toml
integration-tests/workspace-unused-deps/member2/src/: lib.rs
regex-try/: Cargo.toml
regex-try/src/: main.rs
src/: cargo_udeps.rs  main.rs  search_unused.rs
src/printers/: json.rs  mod.rs  stdout.rs
test_cases/false-positive-log/src/: main.rs
test_cases/unused-transitive/: Cargo.toml
test_cases/unused-transitive/lib1/src/: lib.rs
test_cases/unused-transitive/lib2/: Cargo.toml
test_cases/unused-transitive/lib2/src/: lib.rs
test_cases/unused-transitive/src/: main.rs
(+1 files in other folders)
