[package]
name = "cargo-machete"
edition = "2024"
version = "0.9.1"
description = "Find unused dependencies with this one weird trick!"
authors = ["Benjamin Bouvier <benjamin@bouvier.cc>"]
repository = "https://github.com/bnjbvr/cargo-machete"
keywords = []
categories = []
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.9"
cargo_metadata = "0.23.1"
cargo_toml = "0.22.3"
grep = "0.4.1"
ignore = "0.4.25"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rayon = "1.5.2"
serde = "1.0.228"
toml_edit = "0.24.0"
walkdir = "2.3.2"

# Uncomment this for profiling.
#[profile.release]
#debug = true
