[package]
name = "cargo-machete"
edition = "2024"
version = "0.9.2"
description = "Find unused dependencies with this one weird trick!"
authors = ["Benjamin Bouvier <benjamin@bouvier.cc>"]
repository = "https://github.com/bnjbvr/cargo-machete"
keywords = []
categories = []
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
cargo_metadata = "0.23.1"
cargo_toml = "1.0.0"
grep = "0.4.1"
ignore = "0.4.25"
log = "0.4.31"
pretty_env_logger = "0.5.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0"
toml_edit = "0.25.12"
walkdir = "2.5.0"

# musl's default allocator is very slow when used from multiple threads (e.g. rayon)
#
# see https://github.com/BurntSushi/ripgrep/issues/1268#issuecomment-486432534
[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
tikv-jemallocator = { version = "0.7.0" }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
#debug = true # Uncomment this for profiling
