[package]
name = "regex-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
dioxus = { version = "0.1.7", features = ["desktop"] }
grep = "0.2.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
