[package]
name = "ignored-dep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log-once = "0.3.1"
rand_core = "0.6.3"

[package.metadata.cargo-machete]
ignored = [
    "log",
    "rand_core" # actually used, should cause a warning
]
