[package]
name = "ignored-dirs-cross-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14" # used in main.rs (should not be reported as unused)
serde = "1.0"  # used in src/forward/path/mod.rs (should be reported as unused - ignored by forward slash)
tokio = "1.0"  # used in src/backward/path/mod.rs (should be reported as unused - ignored by backward slash)
regex = "1.0"  # not used anywhere (should be reported as unused)

[package.metadata.cargo-machete]
ignored-dirs = [
  "src/forward/path",    # Test forward slash path format
  "src\\backward\\path", # Test backward slash path format
]
