[package]
name = "just-unused"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

[features]
default = ["std"]
std = ["log/std", "other"]
dontlog = []
log = []
other = ["log", "dontlog"]
