[package]
name = "ignored-dirs-workspace-nested-inner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-once = "0.3.1"     # used in main.rs (should not be reported as unused)
serde.workspace = true # used in normal_dir/ (should not be reported as unused)
grep = "0.3.1"         # not used anywhere (should be reported as unused)

[package.metadata.cargo-machete]
ignored-dirs = ["nested"]
